--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ nav.sticky{
     padding: 0px 35px 47px 17px;
     filter:drop-shadow(5px 5px 10px rgba(0,0,0,0.2)) ;
     width: 380px;
-    height: 425px;
+    height: 430px;
     transition: all ease-out 0.3s
 }
 .about-info-item:hover{
@@ -224,17 +224,24 @@ nav.sticky{
     left: 0px;
 }
 
-.about-info-items img{
-    width: 150px;
-    height:140px;
+.about-info-item img{
+    width: 180px;
+    height:120px;
     margin-top: 45px;
+     text-align: center;
+     padding-top: 30px;
+     padding-left: 100px;
+   
 }
 .about-info-item h5{
-    font-size: 32px;
+    font-size: 36px;
+    padding-top: 20px;
+    text-align: center ;
 }
 .about-info-item p{
     font-size:16px;
     margin-top:8px;
+    padding-top: 50px;
 }
 
 
@@ -440,6 +447,7 @@ footer{
     display: flex;
     gap: 20px;
     margin-top: 25px;
+   
 }
 .btn-callout{
     width: 240px;
@@ -468,6 +476,7 @@ footer{
 .btn-callout-black:hover{
     background-color: white;
     color: var(--black);
+   height: auto;
 
 }
 .footer-bottom{
@@ -495,6 +504,7 @@ footer{
 .socials{
     display: flex;
     gap: 10px;
+    padding-bottom: 60px;
 }
 .social-item{
     width: 50px;
@@ -515,4 +525,558 @@ footer{
 .social-item:hover{
     background-color: var(--accent);
 }
+
+#collection-page{
+    margin-top: 50px;
+    margin-bottom: 150px;
+}
+
+#collection-car-item-page{
+    height: 520px;
+}
+
+.collection-category{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 0px 50px;
+    margin-top: 100px;
+}
+
+.collectiion-category h1{
+    font-size: 48px;
+}
+
+.collection-category h2{
+    font-weight: 500;
+}
+
+#collection-page-img{
+    margin: 18px;
+}
+
+.btn-collection-page{
+    width: 100%;
+    border-radius: 12px;
+    font-size: 20px;
+}
+
+.collection-footer{
+    margin-top: 300px;
+}
+
+
+/* /contact  */
+
+.contact{
+    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url('img/contact-img.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.contact h1{
+    font-size:48px;
+    font-weight: bold;
+}
+
+
+.contact p{
+    font-size: 20px;
+    width: 708px;
+    text-align: center;
+   
+}
+
+.car-select{
+    background-color: rgb(255, 254, 254);
+    width: 90vw;
+    height: 153px;
+    border-radius: 32px;
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 72px;
+
+}
+
+.car-select-item{
+    display: flex;
+    flex-direction: column;
+}
+
+.car-select-item label{
+    font-size: 24px;
+}
+.car-select-input{
+    width: 276px;
+    height: 45px;
+    border-radius: 32px;
+    font-size: 16px;
+     padding: 12px 24px;
+}
+
+.contact-form{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    margin-top: 50px;
+
+}
+
+.contact-form input{
+    height: 60px;
+    border: none;
+    border-bottom: 1px solid var(--black);
+    font-size: 32px;
+    font-weight: 600;
+    background-color:transparent;
+    outline: none;
+}
+
+.contact-form button{
+    width: 260px;
+    height: 50px;
+    border-radius: 0px;
+
+}
+
+.contact-footer{
+    margin-top: 300px;
+} 
+
+/* responsivness  */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-widt:1024px){
+    nav{
+        padding: 30px 20px;
+    }
+
+    .brand h1{
+        font-size: 24px;
+    }
+    .menu {
+        gap: 28px;
+    }
+    .menu a {
+       font-size: 20px;
+    }
+    nav .btn-2{
+        width: 118px;
+        height: 35px;
+        font-size: 14px;
+        font-weight: 500;
+    }
+    .hero-page{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .hero-headlines{
+
+        align-items: center;
+        margin-bottom: 30px;
+        gap: 11px;
+    }
+
+    .about{
+        margin-bottom: 700px;
+    }
+    .about-subline{
+        width: 567px;
+    }
+    .about-info{
+        gap: 12px;
+        justify-content: center;
+        top: 350px;
+    }
+    .about-info-item{
+       width: 358px;
+       height: 450px;
+     
+    }
+       
+
+    .collection-container{
+        gap: 12px;
+    }
+    .collection h1{
+        padding-top:  300px;
+    }
+
+    .collection-car-item{
+        width: 359px;
+        height: 450px;
+    }
+    .collection-car-item h2{
+        font-size: 24px;
+    }
+
+    .review{
+        margin-top: 100px;
+    }
+    .review h1{
+        font-size: 48px;
+    }
+    .review-container{
+       gap: 12px;
+    }
+    .review-item{
+        width: 350px;
+        height: 339px;
+    }
+   .review-item p{
+        font-size: 20px;
+    }
+    .review people{
+       margin-top: 30px;
+    }
+
+    .index-footer{
+        margin-top: 300px;
+    }
+    .callout{
+        padding: 50px;
+        background-color: var(--accent);
+        background-image: none;
+    }
+    .callout h2{
+       font-size: 40px;
+       width: 380px;
+       text-align: center;
+    }
+    .callout-description{
+      width: 100%;
+      font-size: 20px;
+    }
+
+    .collection-category{
+        padding: 0px 20px;
+    }
+    .collection-car-item-page{
+        height: 488px;
+    }
+
+    .contact h1{
+        font-size: 40px;
+    }
+
+    .contact p{
+       width: 567px;
+       text-align: center;
+    }
+
+    .car-select{
+        width: 95vw;
+        gap: 44px;
+    }
+
+    .car-select-input{
+        width: 190px;
+        height: 45px;
+    }
+    }
+
+
+
+
+
+
+
+
+
+
+    /* phone  */
+
+    @media (max-width:767px){
+        nav{
+            padding: 20px 30px;
+            width: 100%;
+        }
+        nav .btn{
+            color: var(--black);
+            font-size: 24px;
+            display: block;
+        }
+        .menu {
+    position: absolute;
+    top: 70px;                 /* below navbar */
+    right: 20px;
+    width: 220px;              /* smaller box */
+    background: white;
+    display: none;
+    flex-direction: column;
+    gap: 15px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+    z-index: 999;
+  }
+        /* .menu{
+            display: none;
+            position: absolute;
+            background: var(--accent);
+            flex-direction: column;
+            min-width:80% ;
+            height: 100vh;
+            top: 70px;
+            right: 20px;
+            padding: 50px;
+            transition: 0.5s;
+            transition-property: right;
+        } */
+        nav .menu.active{
+            /* right: 0; */
+            display: flex;
+        }
+        /* inside your @media (max-width:767px) block */
+nav .menu .close-btn {
+    align-self: flex-end;
+    font-size: 24px;
+    /* top: 25px;
+    left: 25px; */
+
+    color: white;
+    cursor: pointer;
+}
+.btn {                     /* hamburger icon */
+    display: block;
+    font-size: 28px;
+    color: var(--black);
+    cursor: pointer;
+  }
+        nav.menu a{
+               display: block;
+               font-size: 20px;
+               padding: 0 15px;
+                margin: 20px;
+                color: white;
+        }
+        nav .btn-2{
+            display: none;
+        }
+
+        .hero-page{
+            padding: 0px 20px;
+            margin-top: 120px;
+        }
+
+        .hero-headline{
+            width: 100%;
+        }
+        .hero-headline h1{
+            font-size: 20px;
+        }
+        .hero-headline p{
+            font-size: 12px;
+        }
+        .btn-2{
+            width: 168px;
+            height: 43px;
+            font-size: 16px;
+        }
+        .download-buttons{
+            margin-top: 12px;
+        }
+
+        .download-buttons img{
+            height: 34px;
+            width: 99px;
+        }
+        .about-container{
+            padding: 20px;
+            height: 262px;
+         
+        }
+        .about-container h1{
+           font-size: 20px;
+           width: 100%;
+           margin-top: 48px;
+        }
+        .about-subline{
+           font-size: 15px;
+           width: 100%;
+         
+        }
+        .about-info{
+            top: 240px;
+        }
+        .about-info-item{
+            width: 100%;
+            height: 350px;
+            align-items: center;
+            padding: 0px 35px 25px 35px;
+        }
+        .about-info-item img{
+            padding-top: 40px;
+            margin: 40px;
+            width: 84px;
+            height: 84px;
+        }
+        .about-info-item p{
+          font-size: 14px;
+           text-align: center;
+           padding: 10px;
+        }
+        .collection{
+            padding-top: 700px;
+        }
+        .collection h1{
+            font-size: 24px;
+            margin-top: 150px;
+      
+        }
+        .collection-container{
+           gap: 24px;
+        }
+        .collection-car-item{
+          width: 280px;
+          height: 350px;
+        }
+        .car-info-container{
+            padding: 13px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .car-info{
+            gap: 18px;
+        }
+        .car-price h5,
+        .car-location i,
+        .collection-car-item h2,
+        .btn-herocar i{
+            font-size: 20px;
+        }
+         .car-price h6,
+        .car-location h6{
+            font-size: 16px;
+        }
+        .car-location,
+        .car-price{
+            gap: 4px;
+        }
+
+        .btn-herocar{
+            width: 200px;
+            height: 50px;
+            font-size: 16px;
+        }
+
+
+        .review{
+            padding: 0px 20px;
+        }
+
+        .review h1{
+           font-size: 24px;
+           text-align: center;
+        }
+        .review-item{
+            width: 100%;
+            height: 250px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .review-item p{
+              font-size: 14px;
+              text-align: center;
+        }
+
+        .callout{
+            padding: 32px;
+        }
+
+        .callout h2{
+           font-size: 24px;
+           width: 100%;
+        }
+        .callout-buttons{
+            flex-direction: column;
+        }
+        .footer-button{
+            flex-direction: column;
+            padding: 10px;
+            justify-content: end;
+            align-items: center;
+        }
+        .footer-brand{
+            font-size: 24px;
+        }
+        .collection-category{
+            margin-top: 80px;
+        }
+        .collection-category h1{
+            margin-top: 0px;
+        }
+        .collection-car-item-page{
+            height:384px;
+        }
+        .btn-collection-page{
+            width: 100%;
+        }
+
+        .contact{
+            padding: 0px 20px;
+        }
+        .contact h1{
+           font-size: 24px;
+        }
+        .contact p{
+           width: 100%;
+           font-size: 15px;
+        }
+        form{
+            width: 100%;
+            align-items: center;
+        }
+
+        .car-select{
+            width: 100%;
+            height: 410px;
+            flex-direction: column;
+        }
+
+        .contact-form{
+            width: 100%;
+        }
+
+        .contact-form .btn-2{
+            width: 100%;
+        }
+    }
+
+
+    @media(max-width:950px){
+        .collection{
+        padding-top: 600px;
+       }
+    }
+
 
